# weact096

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/weact-cli/: Cargo.toml
apps/weact-cli/src/: main.rs
crates/weact-display/: Cargo.toml
crates/weact-display-serial/: Cargo.toml
crates/weact-display-serial/src/: lib.rs
crates/weact-display/src/: color.rs  display.rs  lib.rs  protocol.rs  transport.rs
